[package]
name = "ssj_june2023"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
aws-config = { version = "0.55", optional = true }
aws-sdk-sqs = { version = "0.28", optional = true }
bevy = { version = "0.10", default-features = false }
redis = { version = "0.23", optional = true }

[features]
default = ["client"]
client = ["bevy/default"]
server = ["aws-config", "aws-sdk-sqs", "redis"]
