[package]
name = "ssj_june2023"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
aws-config = { version = "0.55", optional = true }
aws-sdk-sqs = { version = "0.28", optional = true }
bevy = { version = "0.10", default-features = false }
futures-lite = { version = "1.13", optional = true }
redis = { version = "0.23", optional = true }

[features]
default = ["server"]
client = ["bevy/default"]
server = ["aws-config", "aws-sdk-sqs", "futures-lite", "redis"]
