[package]
name = "backend"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0"
axum = "0.6"
aws-config = "0.55"
aws-sdk-sqs = "0.28"
redis = "0.23"
serde = "1.0"
tokio = { version = "1.28", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1.3"

[dependencies.common]
path = "../common"
