[package]
name = "backend"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["headers"] }
aws-config = "0.55"
aws-sdk-sqs = "0.28"
aws-sdk-secretsmanager = "0.28"
aws-sdk-dynamodb = "0.28"
jsonwebtoken = "8.3"
redis = "0.23"
reqwest = "0.11"
serde = "1.0"
serde_dynamo = { version = "4.2", features = ["aws-sdk-dynamodb+0_28"] }
tokio = { version = "1.29", features = ["full"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1.4"

[dependencies.common]
path = "../common"
