[package]
name = "game"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
aws-config = { version = "0.55", optional = true }
aws-sdk-sqs = { version = "0.28", optional = true }
bevy = { version = "0.10", default-features = false }
bevy_egui = { version = "0.20", optional = true }
bevy-inspector-egui = { version = "0.18", optional = true }
bevy-tokio-tasks = "0.10"
futures-lite = "1.13"
rand = "0.8"
redis = { version = "0.23", optional = true }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.28", default-features = false, features = ["rt"] }
webbrowser = { version = "0.8", optional = true }

[dependencies.common]
path = "../common"

[features]
default = ["client"]
client = ["bevy/default", "bevy_egui", "bevy-inspector-egui", "webbrowser"]
server = ["aws-config", "aws-sdk-sqs", "redis"]
