[package]
name = "game"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
aws-config = { version = "0.55", optional = true }
aws-sdk-sqs = { version = "0.28", optional = true }
bevy = { version = "0.11", default-features = false }
bevy_egui = { version = "0.21", optional = true }
bevy-inspector-egui = { version = "0.19", optional = true }
#bevy-persistent = { version = "0.2", features = ["ini"], optional = true }
bevy-tokio-tasks = "0.11"
bytes = "1.4"
dirs = "5.0"
futures-lite = "1.13"
hyper = "0.14"
rand = "0.8"
redis = { version = "0.23", optional = true }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.29", default-features = false, features = ["rt"] }
webbrowser = { version = "0.8", optional = true }

[dependencies.common]
path = "../common"

[features]
default = ["client"]
client = [
    "bevy/default",
    "bevy_egui",
    "bevy-inspector-egui",
    #"bevy-persistent",
    "webbrowser",
]
server = ["aws-config", "aws-sdk-sqs", "redis"]
